# Book-Club-Manager

./: .gitignore  .pylintrc  Books.py  LICENSE  README.md  Reviews.py  Seattle_Library_Catalog_Data.py  Seattle_Library_Checkout_Data.py  bookclubs_seattle.csv  bookish_env.yml  e --abort  environment.yaml  environment.yml  get_seattle_bookclubs_data.py  main.py  pyproject.toml  requirements.txt  seattle_book_clubs.json  streamlit_app.py  streamlit_app_old.py
Book-Club-Manager/: README_recommender_pipeline.txt  streamlit_app.py
app/: __init__.py  config.py  main.py  mock_data.py
backend/: README.md  api.py  auth_service.py  books_service.py  config.py  data_loader.py  events_service.py  forum_service.py  forum_store.py  library_service.py  main.py  recommender_service.py  service.py  storage.py  user_events_service.py  user_store.py
data/: Seattle_Library_Catalog_Data.py  bookclubs_seattle.csv
docs/: Component_spec  Component_spec.md  Functional_spec.md  Milestones.md  Tech_review.md
examples/: README.md  ben_ux_reader_walkthrough.md  rayleigh_fantasy_reader_walkthrough.md  walkthrough_ben_professional_learne.md  walkthrough_rayleigh_casual_reader.md
frontend/: __init__.py  index.html  main.py  package-lock.json  package.json
tests/: conftest.py  test_auth_service.py  test_book_recommender.py  test_book_recommender_fitting.py  test_books_meta_data.py  test_events_service.py  test_extract_isbn10_helper.py  test_format_author_helper.py  test_forum_service.py  test_library_service.py  test_recommender.py  test_recommender_evaluation.py  test_reviews.py  (+3 more)
(+217 files in other folders)
