# In order to build your package, you need to use a "build system".
# There are a number of supported build systems, but here we'll use
# the "setuptools" package.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# The "project" section contains metadata about the project, like
# the authors and version. Note that the `dynamic` setting here
# is very important so that the build system packages up your
# dependencies!
[project]
name = "bookish"
version = "0.0.1"
authors = [
  { name="Ha Tien Nguyen" },
  { name="Elsie Wang" },
  { name = "Maanya Cola Bharath"},
  { name = "Sarah Mathison"}
]
description = "A book club manager"
readme = "README.md"
requires-python = ">=3"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

# to package whole repo set find = {}
[tool.setuptools]
packages = { find = { where = ["data/scripts"] } }

# Where can someone find out more about your project?
[project.urls]
Homepage = "https://github.com/Ha-Tien-121/Book-Club-Manager.git"
Issues = "https://github.com/Ha-Tien-121/Book-Club-Manager/issues"
